Corrected heading alignment

--- a/src/sections/companylist/companylist.module.css
+++ b/src/sections/companylist/companylist.module.css
@@ -652,7 +652,7 @@
   font-family: DM Sans, sans-serif;
   font-weight: 600;
   font-size: 24px;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
   margin-top: 2rem;
 }
 
@@ -1045,9 +1045,9 @@
 @media (max-width: 768px) {
   .headingH3 {
     font-size: 20px;
-    margin-top: 1.5rem;
-    margin-bottom: 0.75rem;
-    text-align: center;
+    margin-top: 0.75rem;
+    margin-bottom: 1.5rem;
+    text-align: left;
     font-size: 0.8rem;
   }
 
