--- a/src/sections/portfoliosuggestions/portfoliosuggestions.module.css
+++ b/src/sections/portfoliosuggestions/portfoliosuggestions.module.css
@@ -119,7 +119,7 @@
   font-family: DM Sans, sans-serif;
   font-weight: 600;
   font-size: 24px;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
   margin-top: 2rem;
 }
 
@@ -127,9 +127,9 @@
 
    .headingH3 {
     font-size: 0.8rem;
-    margin-top: 1.5rem;
-    margin-bottom: 0.75rem;
-    text-align: center;
+    margin-top: 0.75rem;
+    margin-bottom: 1.5rem;
+    text-align:left;
   }
 
   .cardContainer {
